# telegram_shop

./: .gitignore  LICENSE  main.py  pyproject.toml
core/: R-443Y_shop.db  message.py  setting.py  utility.py
core/models/: __init__.py  base.py  category.py  order.py  post.py  product.py  profile.py  user.py
data_base/: dbalchemy.py
handlers/: handler.py  handler_all_text.py  handler_commands.py  handler_inline_query.py  handler_main.py
markup/: markup.py
