[tool.poetry]
name = "telegram-shop"
version = "0.1.0"
description = "This is telegram bot for sale"
authors = ["aleksey88bsuir <aleksey88bsuir@yandex.ru>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.28"
emoji = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
